--- a/Assignment/Assignment 1 18.01.2022/Assignment 1 18.01.2022.ipynb
+++ b/Assignment/Assignment 1 18.01.2022/Assignment 1 18.01.2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "7990c228",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "fc9ae10a",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "0f954f3c",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "4532e9d8",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,11 @@
     "y = dataset.iloc[:,1]\n",
     "print(X.shape)\n",
     "print(y.shape)\n",
-    "\n"
+    "\n",
+    "X_train , X_test , y_train , y_test = train_test_split(X,y,test_size = 0.2 ,random_state = 0)\n",
+    "\n",
+    "print(X_train.shape , y_train.shape)\n",
+    "print(X_test.shape , y_test.shape)"
    ]
   },
   {
@@ -116,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "054854c4",
    "metadata": {},
    "outputs": [
@@ -142,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "4b381394",
    "metadata": {},
    "outputs": [
@@ -150,12 +154,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(24,) (24,)\n"
+      "(30,) (30,)\n"
      ]
     }
    ],
    "source": [
-    "print(X_train.shape , y_train.shape)\n"
+    "print(X.shape , y.shape)\n"
    ]
   },
   {
@@ -168,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "656b3036",
    "metadata": {},
    "outputs": [
@@ -176,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(24, 1) (24,)\n",
+      "(24,) (24,)\n",
       "(24, 1) (24,)\n"
      ]
     }
@@ -192,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "7f6f8fc4",
    "metadata": {},
    "outputs": [
@@ -202,7 +206,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +218,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "id": "4efb5bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = ((X[:,0]*y).mean() - X[:,0].mean()*y.mean())/((X[:,0]**2).mean() - (X[:,0].mean())**2)\n",
+    "c = y.mean() - m*X[:,0].mean()\n",
+    "print(m,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "d10c9dce",
    "metadata": {},
    "outputs": [
@@ -236,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "90dc1dac",
    "metadata": {},
    "outputs": [
@@ -246,7 +262,7 @@
        "array([1.36318681])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "6a9ac209",
    "metadata": {},
    "outputs": [
@@ -267,7 +283,7 @@
        "1.4230769230769242"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "7550c0c2",
    "metadata": {},
    "outputs": [
